--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Willy Wonkas - Personal Portfolio Website Template" />
+    <meta name="description" content="Steven Noboa - Personal Portfolio Website" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
-	<meta name="author" content="willy wonka" />
-    <title>Willy Wonkas - Personal Portfolio Website Template</title>
+	<meta name="author" content="Steven Noboa" />
+    <title>Steven Noboa - Personal Portfolio Website</title>
   <!--favicon-img--> 
    <link rel="icon" type="image/png" href="images/favicon.png">
    <!--favicon-img-->
@@ -55,7 +55,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img src="images/willy wonka logo.png" alt="logo">
+            <img src="images/favicon.jpg" alt="logo">
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
