--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!--Navigator-fullscreen-->
         <div id="navigation-content">
             <div class="logo">
-                <img src="images/willy wonka logo.png" alt="logo">
+                <img src="images/logosn.png" alt="logo">
             </div>
             <div class="navigation-close">
                 <span class="close-first"></span>
@@ -55,7 +55,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img src="images/favicon.jpg" alt="logo">
+            <img src="images/logosn.png" alt="logo">
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
@@ -150,11 +150,11 @@
             <div class="about-first-paragraph wow">
             <!--about description-->
                <span class="about-first-line">
-                    I'm creative 
-                    <span class="color">web developer</span>
+                    I'm a
+                    <span class="color">data scientist</span>
                      based in Madrid , Spain </span>
                      <br>
-               <span class="about-second-line"> With  experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
+               <span class="about-second-line"> As a professional Data Scientist, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
                <div class="cv">
                     <a href="files/CV_StevenNoboa.pdf" download>
                         <button>Download <span class="colors">CV</span></button></a>
@@ -162,7 +162,7 @@
             </div>
             <!--about picture-->
             <div class="about-img">
-                <img src="images/about.jpg" alt="Your Image">
+                <img src="images/about.png" alt="Your Image">
             </div>
             </div>
     
