--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@
                      <br>
                <span class="about-second-line"> As a professional Data Scientist, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
                <div class="cv">
-                    <a href="files/CV_StevenNoboa.pdf" download>
+                    <a href="files/CV_StevenNoboa.pdf" download="CV_StevenNoboa.pdf">
                         <button>Download <span class="colors">CV</span></button></a>
+                        
             </div>
             </div>
             <!--about picture-->
