--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Steven Noboa" />
     <title>Steven Noboa - Personal Portfolio Website</title>
   <!--favicon-img--> 
-   <link rel="icon" type="image/png" href="images/favicon.png">
+   <link rel="icon" type="image/png" href="images/logosn.png">
    <!--favicon-img-->
    <!--main css file should not be removed -->
     <link rel="stylesheet" href="css/index.css">
@@ -37,30 +37,35 @@
         <!--Navigator-fullscreen-->
         <div id="navigation-content">
             <div class="logo">
-                <img src="images/logosn.png" alt="logo">
+                <a href="index.html">
+                    <img src="images/logosn.png" alt="logo">
+                </a>
             </div>
             <div class="navigation-close">
                 <span class="close-first"></span>
                 <span class="close-second"></span>
             </div>
             <div class="navigation-links">
-                <a href="#" data-text="HOME" id="home-link" >HOME</a>
-                <a href="#" data-text="ABOUT" id="about-link" >ABOUT</a>
-                <!-- <a href="#" data-text="BLOG" id="blog-link" >BLOG</a> -->
-                <a href="#" data-text="PORTFOLIO" id="portfolio-link" >PORTFOLIO</a>
-                <a href="#" data-text="CONTACT" id="contact-link" >CONTACT</a>
+                <a href="#" data-text="HOME" id="home-link">HOME</a>
+                <a href="#" data-text="ABOUT" id="about-link">ABOUT</a>
+                <!-- <a href="#" data-text="BLOG" id="blog-link">BLOG</a> -->
+                <a href="#" data-text="PORTFOLIO" id="portfolio-link">PORTFOLIO</a>
+                <a href="#" data-text="CONTACT" id="contact-link">CONTACT</a>
             </div>
         </div>
         <!--Navigator-Fullscreen END-->
-          <!--Home Page-->
+        <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img src="images/logosn.png" alt="logo">
+            <a href="index.html">
+                <img src="images/logosn.png" alt="logo">
+            </a>
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
                 <span class="third-span"></span>
             </div>
+        </div>
         </div>
         <!--Menubar End-->
           <!--Header-->
@@ -311,10 +316,15 @@
                         <img src="images/portfolio-first.jpg" alt="portfolio-first">
                      </div>
                      <div class="portfolio-text">
-                         <h2>App Idea</h2>
-                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate 
-                             expedita eius dignissimos. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
-                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                         <h2>Análisis del precio de coches de segunda mano en España
+                        </h2>
+                         <p>Conoceremos cómo se establece la variable precio respecto a otras: tipo de combustible, año de producción, kms, potencia, provincia...
+                            Entnderemos los factores, relaciones y distribuciones del mercado</p>
+                            <a href="https://github.com/StevenNoboa/Analisis-del-precio-de-coches-de-segunda-mano-en-Espana.git">
+                                <button>
+                                    <span class="index">View Project in Github <i class="gg-arrow-right"></i></span>
+                                </button>
+                            </a>
                      </div>
                  </div>
                  <div class="portfolio portfolio-second">
@@ -322,22 +332,29 @@
                         <img src="images/portfolio-second.jpg" alt="portfolio-second">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Web Designing</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id cumque placeat minima ad laudantium suscipit
-                             voluptatem ducimus. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <h2>Proyecto Machine Learning Bank Customer Churn Detection
+                        </h2>
+                        <p>Analizar y predecir el comportamiento del cliente, especialmente si es probable que abandonen el banco.
+                        Identificar factores que contribuyen a la rotación y ayudar en el desarrollo de estrategias para retener a los clientes.</p>
+                        <a href="https://github.com/StevenNoboa/Proyecto_Machine_Learning_Bank_Customer_Churn_Detection.git">
+                            <button>
+                                <span class="index">View Project in Github <i class="gg-arrow-right"></i></span>
+                            </button>
+                        </a>
                     </div>
                 </div>
-             
                 <div class="portfolio portfolio-third">
                     <div class="portfolio-image">
                         <img src="images/portfolio-third.jpg" alt="portfolio-third">
                     </div>
                     <div class="portfolio-text">
-                        <h2>UI Designing</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate expedita eius dignissimos
-                            .. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <h2>Api-BBDD-Modelo ML</h2>
+                        <p>Desarrollar una API con Flask para desplegar un modelo de machine learning que predice ventas a partir de gastos en marketing en televisión, radio y periódicos. La API permitirá que una web interna, desarrollada en AngularJS, consuma el modelo y se comunique con una base de datos para ingestar nuevos registros y reentrenar el modelo. </p>
+                        <a href="https://github.com/StevenNoboa/Apis_BBDD_Model.git">
+                            <button>
+                                <span class="index">View Project in Github <i class="gg-arrow-right"></i></span>
+                            </button>
+                        </a>
                     </div>
                 </div>
                 <div class="portfolio portfolio-fourth">
@@ -434,7 +451,7 @@
               </div>
               
               <div class="contect-info-content-line">
-                  <img src="./images/icon-email.png" class="icon" alt="email-icon">
+                  <img src="images/correo.png" class="icon" alt="email-icon">
                   <div class="contact-info-icon-text">
                     <h6>stevennoboaordonez@gmail.com</h6>
                     <p></p>
