--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                             Steven Noboa - stevennoboaordonez@gmail.com
                         </div>
                         <div>
-                            <a href="https://www.linkedin.com/in/steven-noboa-ordóñez-24055810b/" target="_blank"></a>
+                            <a href="https://www.linkedin.com/in/steven-noboa-ordóñez-24055810b/" target="_blank">
                                 <img src="images/linkedin logo.png"  alt="linkedin-logo" class="images" height="30px">
                             <a href="https://github.com/StevenNoboa" target="_blank">
                                 <img src="images/github.png" alt="github-logo" class="images" height="30px">
