--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
              <div id="portfolio-content">
                 <div class="portfolio portfolio-first">
                     <div class="portfolio-image">
-                        <img src="images/tb-se.jpg" alt="portfolio-third">
+                        <img src="images/portfolio-third.jpg" alt="portfolio-first">
                     </div>
                     <div class="portfolio-text">
                         <h2> Proyecto final Data Science - Bootcamp</h2>
@@ -347,7 +347,7 @@
                 </div>
                  <div class="portfolio portfolio-second">
                      <div class="portfolio-image">
-                        <img src="images/portfolio-first.jpg" alt="portfolio-first">
+                        <img src="images/portfolio-first.jpg" alt="portfolio-second">
                      </div>
                      <div class="portfolio-text">
                          <h2>Análisis del precio de coches de segunda mano en España
@@ -363,7 +363,7 @@
                  </div>
                  <div class="portfolio portfolio-third">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-second.jpg" alt="portfolio-second">
+                        <img src="images/portfolio-second.jpg" alt="portfolio-third">
                     </div>
                     <div class="portfolio-text">
                         <h2>Proyecto Machine Learning Bank Customer Churn Detection
@@ -379,7 +379,7 @@
                 </div>
                 <div class="portfolio portfolio-four">
                     <div class="portfolio-image">
-                        <img src="images/dark_library.png" alt="portfolio-third">
+                        <img src="images/dark_library.png" alt="portfolio-four">
                     </div>
                     <div class="portfolio-text">
                         <h2>Proyecto de base de datos con AWS RDS, Flask y OpenAI</h2>
@@ -395,7 +395,7 @@
                 </div>
                 <div class="portfolio portfolio-five">
                     <div class=" portfolio-image">
-                        <img src="images/portfolio-third.jpg" alt="portfolio-fourth">
+                        <img src="images/tb-se.jpg" alt="portfolio-five">
                     </div>
                     <div class="portfolio-text">
                         <h2>Api-BBDD-Modelo ML</h2>
