--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <!--header image-->
             <div class="header-image">
-            <img src="images/3.jpg" alt="logo">
+            <img src="images/Sn.png" alt="logo">
             </div>
             <!--header image end-->
         </div>
