--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Steven Noboa" />
     <title>Steven Noboa - Personal Portfolio Website</title>
   <!--favicon-img--> 
-   <link rel="icon" type="image/png" href="images/logosn.png">
+   <link rel="icon" type="image/png" href="images/logo SN_DEF_SCIENTIST.png">
    <!--favicon-img-->
    <!--main css file should not be removed -->
     <link rel="stylesheet" href="css/index.css">
@@ -38,7 +38,7 @@
         <div id="navigation-content">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/logosn.png" alt="logo">
+                    <img src="images/logo SN_DEF_SCIENTIST.png" alt="logo">
                 </a>
             </div>
             <div class="navigation-close">
@@ -58,7 +58,7 @@
         <!--Menubar-->
         <div id="navigation-bar">
             <a href="index.html">
-                <img src="images/logosn.png" alt="logo">
+                <img src="images/logo SN_DEF_SCIENTIST.png" alt="logo">
             </a>
             <div class="menubar">
                 <span class="first-span"></span>
@@ -94,7 +94,7 @@
             </div>
             <!--header image-->
             <div class="header-image">
-            <img src="images/Sn.png" alt="logo">
+            <img src="images/snoboa.png" alt="logo">
             </div>
             <!--header image end-->
         </div>
@@ -453,7 +453,7 @@
                     <div class="form-header">
                         
                         <form id="myForm">
-                            Actualmente estoy abierto a oportunidades de proyectos o trabajo. <span class="color"> No dudes en conectarte conmigo.</span>
+                            Actualmente estoy abierto a oportunidades de proyectos o trabajo. <span class="color"> No dudes en contactarte conmigo.</span>
                             Gracias por considerar mi perfil y visitar mi portfolio. Estoy deseando hablar contigo. <span class="color"> 
                             </div>
                         </div>
