--- a/index.html
+++ b/index.html
@@ -472,13 +472,6 @@
                         </div>
                     </div>
                     <div class="contect-info-content-line">
-                        <img src="./images/icon-location.png" class="icon" alt="location-icon">
-                        <div class="contact-info-icon-text">
-                            <h6>Location</h6>
-                            <p>Madrid, Spain</p>
-                        </div>
-                    </div>
-                    <div class="contect-info-content-line">
                         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=stevennoboaordonez@gmail.com" target="_blank">
                             <img src="images/correo.png" alt="correo-img" class="images" height="30px">
                         </a>
@@ -493,7 +486,7 @@
                         </a>
                         <div class="contact-info-icon-text">
                             <h6>Linkedin</h6>
-                            <p>Perfil profesional</p>
+                            <p>Perfil profesional: Steven Noboa Ordóñez</p>
                         </div>
                     </div>
                     <div class="contect-info-content-line">
@@ -502,7 +495,7 @@
                         </a>
                         <div class="contact-info-icon-text">
                             <h6>Github</h6>
-                            <p>Repositorio de proyectos</p>
+                            <p>Repositorio de proyectos : StevenNoboa</p>
                         
                     </div>
                 </div>
