--- a/index.html
+++ b/index.html
@@ -149,16 +149,18 @@
                      <br>
                <span class="about-second-line"> Como graduado en Data Science, he adquirido las habilidades y el conocimiento necesario para desarrollar proyectos con éxito y eficiencia. Disfruto de este sector, cada paso y reto son una motivación par mí.</span>
                <div class="cv">
-                    <a href="files/CV_StevenNoboa.pdf" download="CV_StevenNoboa.pdf">
+                    <a href="files/CV-StevenNoboa.pdf" download="CV_StevenNoboa.pdf">
                         <button>Descargar <span class="colors">CV</span></button></a>
-                        <a href="files/CV_StevenNoboa.pdf" download="CV_StevenNoboa.pdf">
+                        <a href="files/CV-StevenNoboa.pdf" download="CV_StevenNoboa.pdf">
                             <button>Download <span class="colors">CV</span></button></a>
             </div>
             </div>
             <!--about picture-->
             <div class="about-img">
-                <img src="images/about.png" alt="Your Image">
-            </div>
+                <video width="600" height="600" autoplay loop muted>
+                    <source src="images/video-sn.mp4" type="video/mp4">
+                    Tu navegador no soporta la etiqueta de video.
+                </video>
             </div>
     
             </div>
