--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
              <div id="portfolio-content">
                 <div class="portfolio portfolio-first">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-third.jpg" alt="portfolio-first">
+                        <img src="images/portfolio-third.png" alt="portfolio-first">
                     </div>
                     <div class="portfolio-text">
                         <h2> Proyecto final Data Science - Bootcamp</h2>
@@ -349,7 +349,7 @@
                 </div>
                  <div class="portfolio portfolio-second">
                      <div class="portfolio-image">
-                        <img src="images/portfolio-first.jpg" alt="portfolio-second">
+                        <img src="images/portfolio-first.png" alt="portfolio-second">
                      </div>
                      <div class="portfolio-text">
                          <h2>Análisis del precio de coches de segunda mano en España
@@ -365,7 +365,7 @@
                  </div>
                  <div class="portfolio portfolio-third">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-second.jpg" alt="portfolio-third">
+                        <img src="images/portfolio-second.png" alt="portfolio-third">
                     </div>
                     <div class="portfolio-text">
                         <h2>Proyecto Machine Learning Bank Customer Churn Detection
@@ -397,7 +397,7 @@
                 </div>
                 <div class="portfolio portfolio-five">
                     <div class=" portfolio-image">
-                        <img src="images/tb-se.jpg" alt="portfolio-five">
+                        <img src="images/tb-se.png" alt="portfolio-five">
                     </div>
                     <div class="portfolio-text">
                         <h2>Api-BBDD-Modelo ML</h2>
