--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
             <!--about picture-->
             <div class="about-img">
-                <video width="600" height="600" autoplay loop muted>
+                <video autoplay loop muted>
                     <source src="images/video-sn.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
