--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                <div class="cv">
                     <a href="files/CV-StevenNoboa.pdf" download="CV_StevenNoboa.pdf">
                         <button>Descargar <span class="colors">CV</span></button></a>
-                        <a href="files/CV-StevenNoboa.pdf" download="CV_StevenNoboa.pdf">
+                        <!--<a href="files/CV-StevenNoboa.pdf" download="CV_StevenNoboa.pdf">
                             <button>Download <span class="colors">CV</span></button></a>
             </div>
             </div>
