--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <a href="files/CV-StevenNoboa.pdf" download="CV_StevenNoboa.pdf">
                         <button>Descargar <span class="colors">CV</span></button></a>
                         <!--<a href="files/CV-StevenNoboa.pdf" download="CV_StevenNoboa.pdf">
-                            <button>Download <span class="colors">CV</span></button></a>
+                            <button>Download <span class="colors">CV</span></button></a>-->
             </div>
             </div>
             <!--about picture-->
